[gd_scene load_steps=3 format=3 uid="uid://j3xv3ui3iawi"]

[ext_resource type="Script" uid="uid://bbu31dxc7kkwc" path="res://stage1.gd" id="1_7uypk"]
[ext_resource type="PackedScene" uid="uid://cuxdc162kncle" path="res://bird.tscn" id="1_bird"]

[node name="Stage1" type="Node"]
script = ExtResource("1_7uypk")

[node name="Bird" parent="." instance=ExtResource("1_bird")]
position = Vector2(100, 240)

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 30.0
offset_top = 30.0
offset_right = 30.0
offset_bottom = 30.0
text = "Score: 0"

[node name="QuestionLabel" type="Label" parent="."]
offset_left = 248.0
offset_top = 93.0
offset_right = 332.0
offset_bottom = 121.0
text = "1 + 1 = ?"
horizontal_alignment = 1

[connection signal="collide" from="Bird" to="." method="_on_bird_collide"]
